fix: align items in feed

--- a/src/pages/feed/feedStyle.css
+++ b/src/pages/feed/feedStyle.css
@@ -60,7 +60,7 @@ ul {
   flex: 4;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
   overflow-x: hidden;
   border-left: 1px solid rgba(0, 0, 0, 0.275);
   border-right: 1px solid rgba(0, 0, 0, 0.275);
